--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "he-she.doc.tar.xz": 1bc4702d2299094450bcca54b60daae4f2b35bca
-  "he-she.tar.xz": 993917ef97495ddbf38476080c32231c28bfa1ea
+  he-she.doc.tar.xz: 61a548590255d57658b51a9063f02ee9a1b7f5e0
+  he-she.tar.xz: 513b58a529c52e04544d3323a1fe435dfff3f1e3
