--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  he-she.doc.tar.xz: 604b9995334dd470cb96bce20ba95f9abdea008d
-  he-she.tar.xz: f5f4081676e6f3da507f947be9c88e25b2e142cc
+  he-she.doc.r41359.tar.xz: f63c96f55012107cdb7819b99ccaf09e9c90e18f
+  he-she.r41359.tar.xz: 0000bd965645e295843b2ac7cb73325ccd9360ae
